--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node index.ts"
   },
-  "keywords": ["typescript", "estudo", "testes"],
+  "keywords": [
+    "typescript",
+    "estudo",
+    "testes"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.6.0"
   }
 }
