--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/voca": "^1.4.6",
     "tsx": "^4.19.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "voca": "^1.4.1"
   }
 }
