:wrench: Versão do Ecmascript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       // outras opções
       "typeRoots": ["./node_modules/@types", "./types"],
-      "lib": ["ES2020", "dom"]
+      "lib": ["ESNext", "dom"]
     },
 
   }
