--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "tsx": "^4.19.0",
-    "typescript": "^5.3.2"
-  }
+    "typescript": "^5.3.2",
+    "@types/node": "^24.5.2"
+  },
+  
+  "type": "module"
 }
